[gd_scene load_steps=19 format=3 uid="uid://f4785n66umoe"]

[ext_resource type="Script" uid="uid://d3snmc607dybd" path="res://Battle/Enemy.gd" id="1_w44d8"]
[ext_resource type="Texture2D" uid="uid://b7ygoyj2685ty" path="res://Images/big-cig.png" id="2_13415"]
[ext_resource type="PackedScene" uid="uid://cubymfij3jg4j" path="res://Battle/HealthBar.tscn" id="3_13415"]
[ext_resource type="Texture2D" uid="uid://br8iu6bnl22p1" path="res://Images/big-cig-idle.png" id="3_oxexe"]
[ext_resource type="FontFile" uid="uid://bppc451fs64fn" path="res://Themes/Tiny Click2.ttf" id="5_nkp60"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nkp60"]
atlas = ExtResource("3_oxexe")
region = Rect2(0, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq2ar"]
atlas = ExtResource("3_oxexe")
region = Rect2(25, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_dddou"]
atlas = ExtResource("3_oxexe")
region = Rect2(50, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpras"]
atlas = ExtResource("3_oxexe")
region = Rect2(75, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_py68t"]
atlas = ExtResource("3_oxexe")
region = Rect2(100, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlabr"]
atlas = ExtResource("3_oxexe")
region = Rect2(125, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_di1u7"]
atlas = ExtResource("3_oxexe")
region = Rect2(150, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayfb0"]
atlas = ExtResource("3_oxexe")
region = Rect2(175, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks87o"]
atlas = ExtResource("3_oxexe")
region = Rect2(200, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxwav"]
atlas = ExtResource("3_oxexe")
region = Rect2(225, 0, 25, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_71hb8"]
atlas = ExtResource("3_oxexe")
region = Rect2(250, 0, 25, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_skiq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkp60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq2ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dddou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpras")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py68t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlabr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di1u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayfb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks87o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxwav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71hb8")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxexe"]
bg_color = Color(0.619608, 0.619608, 0.619608, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[node name="Enemy" type="Node2D"]
script = ExtResource("1_w44d8")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -11)
texture = ExtResource("2_13415")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_skiq8")
autoplay = "default"
frame_progress = 0.254276

[node name="BlockIcon" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="IntentIcon" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="IntentLabel" type="Label" parent="."]
offset_left = -13.0
offset_top = -54.0
offset_right = 27.0
offset_bottom = -32.0
theme_override_font_sizes/font_size = 8

[node name="StatusContainer" type="HBoxContainer" parent="."]
offset_top = 44.0
offset_right = 110.0
offset_bottom = 84.0

[node name="HealthBarContainer" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 4)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = 33.0
offset_right = 40.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oxexe")

[node name="HealthBar" parent="HealthBarContainer" instance=ExtResource("3_13415")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flash_on_damage = false
normal_color = Color(0.866667, 0.0980392, 0.113725, 1)
low_health_color = Color(0.909804, 0.494118, 0.192157, 1)
critical_health_color = Color(0.994515, 0.842221, 0, 1)

[node name="HealthLabel" type="Label" parent="."]
offset_left = -12.0
offset_top = 29.0
offset_right = 12.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_nkp60")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="BlockLabel" type="Label" parent="."]
offset_left = -44.0
offset_top = 30.0
offset_right = -37.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 8
text = "5	"
